# sworker

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: cli.rs  lib.rs  main.rs  manager.rs  numberer.rs  positioner.rs
